# DRG-Designer

./: .gitignore  BNODetails.qml  CMakeLists.txt  DRGBrowser.qml  DRGDetails.qml  DRG_Designer.pro  DRG_Designer_en_AS.ts  ICD11Graph.qml  ICDDetails.qml  ICDSwipe.qml  MainWindow.qml  PostCoordTree.qml  README.md  Section.qml  SectionTitle.qml  StartupWindow.qml  TopMenu.qml  app.qml  diagram.qmodel  drg.cpp  drg.h  drgbrowsermodel.cpp  drgbrowsermodel.h  drgchapter.cpp  drgchapter.h  enum.hpp  icd11.cpp  icd11.h  listmodel.cpp  listmodel.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  repository.cpp  repository.h  selection.cpp  selection.h  session.cpp  state.scxml  (+8 more)
CRUD/include/: database.h
CRUD/scr/: database.cpp  main.cpp
Client/: CMakeLists.txt
Client/include/: enum.hpp  qmlmanager.h  session.h  treeitem.h
Client/src/: drg.cpp  drgchapter.cpp  main.cpp  qmlmanager.cpp  treeitem.cpp  treemodel.cpp
Client/themes/NordStyle/: Nord.qml  qmldir
Client/views/: BNODetails.qml  Editor.qml  ICDSwipe.qml  MainWindow.qml  PostCoordTree.qml  StartupWindow.qml
NordStyle/: Nord.qml
